--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 /computer-networks-lab-files/lab-3 19-08-2024/InetAddressTest/nbproject/private/
 /computer-networks-lab-files/lab-3 19-08-2024/InetAddressTest/build
-.class
+*.class
 
