Swing program implemented lab 6

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /computer-networks-lab-files/lab-3 19-08-2024/InetAddressTest/build
 *.class
 
+/web-technologies-lab-files/Lab-6 12-09-2024/SwingsGUIApplication/nbproject/private/
+/web-technologies-lab-files/Lab-6 12-09-2024/SwingsGUIApplication/build/
