SQL connection implemented

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 
 /web-technologies-lab-files/Lab-6 12-09-2024/SwingsGUIApplication/nbproject/private/
 /web-technologies-lab-files/Lab-6 12-09-2024/SwingsGUIApplication/build/
+/web-technologies-lab-files/Lab-6 12-09-2024/SqliteConnection/nbproject/private/
+/web-technologies-lab-files/Lab-6 12-09-2024/SqliteConnection/build/
